--- a/app/templates/components/request_section.html
+++ b/app/templates/components/request_section.html
@@ -10,7 +10,7 @@
         <svg class="w-5 h-5 mr-2 text-blue-400" fill="none" stroke="currentColor" viewBox="0 0 24 24">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"></path>
         </svg>
-        {% if has_complete_request %}Request Approved{% else %}Partial Requests Approved{% endif %}
+        {% if has_complete_request %}Request Approved{{ integration_message if integration_message else '' }}{% else %}Partial Requests Approved{{ integration_message if integration_message else '' }}{% endif %}
         {% elif request_status == 'downloading' %}
         <svg class="w-5 h-5 mr-2 text-purple-400" fill="none" stroke="currentColor" viewBox="0 0 24 24">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 16v1a3 3 0 003 3h10a3 3 0 003-3v-1m-4-4l-4 4m0 0l-4-4m4 4V4"></path>
