--- a/app/templates/recent_requests_horizontal.html
+++ b/app/templates/recent_requests_horizontal.html
@@ -52,7 +52,7 @@
                         
                         <!-- Status Badge -->
                         <div class="ml-2 flex-shrink-0" id="status-badge-{{ item.request_id }}">
-                            {{ media_status_badge(item, style='badge', size='sm') }}
+                            {{ media_status_badge(item, style='badge', size='sm', base_url=base_url) }}
                         </div>
                     </div>
                     
